[package]
name = "webgate-initializer"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2.174", default-features = false }

[profile.release]
opt-level = "s"     # Optimize for size
debug = false
strip = true        # Strip symbols
panic = "abort"     # Abort on panic instead of unwinding
lto = true          # Enable link-time optimization
codegen-units = 1   # Single codegen unit for better optimization

[profile.dev]
panic = "abort"

[[bin]]
name = "init"
path = "src/main.rs"
